# AI-Code-Repository-Assistant

./: .gitignore  README.md  cli.py  gui.py  pyproject.toml  requirements.txt  setup.py  test_all_features.py
scripts/: test_endpoints.py
src/: __init__.py  context.py  main.py  model.py  protocol.py
src/ai/: __init__.py  code_analyzer.py  code_reviewer.py  gemini_client.py
src/api/: routes.py
src/core/: config.py
src/git_ops/: __init__.py  repository_manager.py
src/utils/: helpers.py
tests/: conftest.py  test_api.py  test_code_analyzer.py  test_code_reviewer.py  test_gemini_client.py  test_repository_manager.py
